adjust app for requirements, add auth service/controller
